# gtid

./: .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  HOWTO.md  LICENSE  README.md  SECURITY.md  SECURITY_PATTERNS.md  clippy.toml
api/: Cargo.toml
api/src/: helpers.rs  lib.rs  router.rs
api/src/handlers/: authorize_url.rs  introspect.rs  jwks.rs  mod.rs  revoke.rs  token.rs  userinfo.rs  users.rs  well_known.rs
dev/: run.ps1  run.sh
dev/mailpit/: docker-compose.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: email_normalize.rs  password_strength.rs  pkce_verify.rs  redirect_uri.rs  scope_validation.rs
locales/: de.yml  en.yml
locales/de/: main.ftl
locales/en/: main.ftl
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/tests/e2e/: flow.rs  main.rs  security.rs  users.rs
shared/: Cargo.toml
shared/locales/: de.yml  en.yml
shared/src/: config.rs  datetime.rs  errors.rs  i18n.rs  lib.rs  limits.rs  oauth.rs
shared/src/crypto/: constant_time.rs  hash.rs  id.rs  jwt.rs  keys.rs  password.rs  pkce.rs  totp.rs
shared/src/email/: mod.rs  smtp_sender.rs
shared/src/entities/: client.rs  email_change.rs  email_template_type.rs  mod.rs  password_reset_token.rs  queued_email.rs  user.rs
shared/src/middleware/: bot_trap.rs  content_type.rs  language.rs  lockout.rs  mod.rs  pending_2fa.rs  pending_redirect.rs  rate_limit.rs  security_headers.rs  tracked_store.rs
shared/src/models/: mod.rs
shared/src/repositories/: consent.rs  db.rs  legal_page.rs  mod.rs  refresh_token.rs  session.rs  trusted_device.rs  user.rs
shared/src/routes/: helpers.rs  mod.rs
src/: config.rs  errors.rs  i18n.rs  lib.rs  main.rs
src/crypto/: hash.rs  id.rs  jwt.rs  keys.rs  mod.rs  password.rs  pkce.rs  totp.rs
src/email/: mod.rs  sender.rs  worker.rs
src/entities/: authorization_code.rs  email_template.rs  legal_page.rs  refresh_token.rs  session.rs  trusted_device.rs
src/middleware/: bot_trap.rs  content_type.rs  csrf.rs  language.rs  lockout.rs  mod.rs  pending_2fa.rs  pending_redirect.rs  rate_limit.rs  security_headers.rs  session.rs  tracked_store.rs
src/models/: auth_code.rs  email_confirmation_token.rs  email_template.rs  legal_page.rs  mod.rs  refresh_token.rs  session.rs  user.rs
src/repositories/: auth_code.rs  client.rs  consent.rs  db.rs  email_change.rs  email_confirmation_token.rs  email_queue.rs  email_template.rs  legal_page.rs  mod.rs  password_reset_token.rs  refresh_token.rs  session.rs  trusted_device.rs  user.rs
src/routes/: admin.rs  auth.rs  authorize.rs  authorize_url.rs  ctx.rs  helpers.rs  introspect.rs  mod.rs  profile.rs  revoke.rs  router.rs  static_files.rs  token.rs  userinfo.rs  well_known.rs
src/routes/api/: auth.rs  authorize.rs  authorize_url.rs  helpers.rs  introspect.rs  jwks.rs  mod.rs  profile.rs  revoke.rs  token.rs  userinfo.rs  well_known.rs
src/routes/ui/: auth.rs  authorize.rs  clients.rs  confirm_email.rs  confirm_email_change.rs  dashboard.rs  email_templates.rs  helpers.rs  legal.rs  mod.rs  password_reset.rs  profile.rs  setup.rs  static_files.rs  totp.rs  users.rs
static/: app.js  authorize.html  base.html  confirm_email_change_success.html  confirm_email_success.html  email_editor.js  error.html  forgot_password.html  forgot_password_sent.html  i18n.json  legal.html  login.html  profile.html  reset_password.html  reset_password_success.html  setup.html  style.css  totp_verify.html
static/admin/: _sidebar.html  client_create.html  client_edit.html  clients.html  dashboard.html  email_template_edit.html  email_templates.html  legal_page_edit.html  legal_pages.html  user_create.html  user_edit.html  users.html
tests/e2e/: flow.rs  main.rs  security.rs
ui/: Cargo.toml
ui/src/: ctx.rs  lib.rs  router.rs
ui/src/handlers/: auth.rs  authorize.rs  clients.rs  confirm_email.rs  confirm_email_change.rs  dashboard.rs  email_templates.rs  helpers.rs  legal.rs  mod.rs  password_reset.rs  profile.rs  setup.rs  static_files.rs  totp.rs  users.rs
ui/src/middleware/: csrf.rs  mod.rs  security_headers.rs  session.rs
ui/static/: app.js  authorize.html  confirm_email_success.html  email_editor.js  forgot_password.html  profile.html  reset_password_success.html  setup.html  style.css  totp_setup.html
ui/static/admin/: _sidebar.html  client_create.html  client_edit.html  clients.html  user_create.html  users.html
