[package]
name = "gtid"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.10"
sha2 = "0.11"
base64 = "0.22"
uuid = { version = "1", features = ["v6"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["trace"] }
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
percent-encoding = "2"
form_urlencoded = "1"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem", "rand_core"] }
hex = "0.4.3"
subtle = "2"
tower-cookies = "0.11.0"
password-strength = "1.0.0"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server", "server-auto"] }
arc-swap = "1.9.0"
dashmap = "6.1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.13", features = ["cookies", "json", "form"] }
scraper = "0.26"
tempfile = "3"
url = "2"
serde_json = "1"

