[package]
name = "gtid-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
gtid-shared = { path = "../shared" }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tracing = "0.1"
base64 = "0.22"
percent-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
