[package]
name = "gtid-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gtid-server"
path = "src/main.rs"

[dependencies]
gtid-shared = { path = "../shared" }
gtid-api = { path = "../api" }
gtid-ui = { path = "../ui" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tower-cookies = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server", "server-auto"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.13", features = ["cookies", "json", "form"] }
scraper = "0.26"
tempfile = "3"
url = "2"
serde_json = "1"
base64 = "0.22"
sha2 = "0.11"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
