[package]
name = "gtid-ui"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
gtid-shared = { path = "../shared" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tower-cookies = "0.11.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
base64 = "0.22"
percent-encoding = "2"
form_urlencoded = "1"
uuid = { version = "1", features = ["v6"] }
rand = "0.10"
rapidhash = "4"
dashmap = "6.1.0"
subtle = "2"
hex = "0.4.3"
idna = "1"
totp-rs = { version = "5", features = ["otpauth", "gen_secret", "qr"] }
password-strength = "1.0.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
